--- a/teste.html
+++ b/teste.html
@@ -1,4 +1,12 @@
-teste
+<!DOCTYPE html>
+<html lang="pt">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Alô</title>
+    </head>
+    <body>
 <h1>Olá</h1>
 <ol>
 
@@ -6,3 +14,6 @@ teste
     <li>b</li>
 
 </ol>
+
+</body>
+</html>
