--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-exemplo...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página inicial</title>
+</head>
+<body>
+    <h1>Minha página de exemplos</h1>
+
+    <p>meu primeiro teste</p>
+    <p>outro teste</p>
+
+</body>
+</html>
