--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Minha página de exemplos</h1>
 
-    <p>meu primeiro teste</p>
-    <p>outro teste</p>
+    <p>meu primeiro <a href="teste.html">teste</a></p>
+    <p>outro <a href="outra.html">teste</a></p>
 
 </body>
 </html>
